--- a/templates/date.html
+++ b/templates/date.html
@@ -30,7 +30,7 @@
                 }
             },
             series: [{
-                name: "Quest Trade Holdings",
+                name: "Returns",
                 data: pnl_list, //All Zero Values is Fake Data
                 pointStart: Date.UTC(2021, 5, 8),
                 pointInterval: 24 * 36e5
