--- a/templates/date.html
+++ b/templates/date.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>divya grow Holding</title>
+    <title>Tact grow Holdings</title>
     <script src="https://code.highcharts.com/stock/highstock.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
 
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <h1 style="color: black;" style="align-items: center;"> Divya Holdings </h1>
+    <h1 style="color: black;" style="align-items: center;"> Tact grow Holdings </h1>
     <script>
         var pnl_list = JSON.parse('{{pnl_list|tojson}}')
         var chart = new Highcharts.StockChart({
